fix: Probando arreglo de bug con los CORS